--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,17 @@ httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+iniconfig==2.1.0
 Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+packaging==25.0
+pluggy==1.6.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 Pygments==2.19.2
+pytest==8.4.2
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
@@ -30,6 +34,8 @@ rignore==0.7.6
 sentry-sdk==2.45.0
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.44
+sqlmodel==0.0.27
 starlette==0.49.3
 tomli==2.3.0
 typer==0.20.0
